# Cliche-Constants

./: LICENSE  Q-what-is-special-about-the-planck-length.md  Q:what is special about the plank length  README.md  cliche_constants.py  pyproject.toml  technical
code/: cliche_constants.c  cliche_constants.cpp  cliche_constants.go
code/python/cliche-constants/: __init__.py
marketing/: README.md  one-pager-general.md  one-pager-physicists.md  overview.md  taglines-and-social.md
technical/: derivation-length.md  derivation-time.md  notes-literature.md  notes.md
